--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -57,7 +57,7 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 18px;
-    color: #3474E2;
+    color: #1C2A53;
     letter-spacing: -0.165px;
 }
 
@@ -72,6 +72,7 @@
 
 .header .lg .links .link.link-btn2{
     background-color: #3474E2;
+    font-size: 14px;
 }
 
 
