--- a/src/static/css/landingpage.css
+++ b/src/static/css/landingpage.css
@@ -1,5 +1,4 @@
 .wrapper {
-  padding: 0px 11.07%;
   padding-top: 55px;
 }
 
@@ -8,6 +7,7 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 85px;
+  padding: 0px 11.07%;
 }
 
 .top-desc .imgs {
@@ -103,6 +103,126 @@
 
 .vendor-desc-img img {
   width: 100%;
+}
+
+.customers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: #06237b;
+  padding: 10% 9%;
+}
+
+.vendors {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: #faffff;
+  padding: 10% 9%;
+}
+
+.customers .customers-desc h2 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 54px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.customers .customers-desc p {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  display: flex;
+  align-items: flex-start;
+  letter-spacing: -0.165px;
+  color: #d5ddf6;
+  margin-bottom: 24px;
+}
+
+.customers .customers-desc p span {
+  margin-left: 10px;
+}
+
+.customers .customers-desc {
+  width: 40%;
+}
+
+.customers .cus img {
+  width: 376px;
+  height: 420.31px;
+}
+
+.vendors .customers-desc h2 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 54px;
+  color: #03113A;
+  margin-bottom: 24px;
+}
+
+.vendors .customers-desc p {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  display: flex;
+  align-items: flex-start;
+  letter-spacing: -0.165px;
+  color: #5A6B72;
+  margin-bottom: 24px;
+}
+
+.vendors .customers-desc p span {
+  margin-left: 10px;
+}
+
+.vendors .customers-desc {
+  width: 40%;
+}
+
+.vendors .cus img {
+  width: 376px;
+  height: 420.31px;
+}
+
+.customer-button{
+   padding: 22px 12px;
+  margin-top: 20px;
+  margin-left: 10% ;
+  color: #ffffff;
+  background-color: #3474e2;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #ffffff;
+  display: inline-block;
+  width: 50%;
+  min-height: 50px;
+  text-align: center;
+  box-sizing: border-box;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  cursor: pointer;
+  border: none;
+}
+
+.vendor-button{
+   background-color: #006D77;
+ 
 }
 
 .about-us-text,
@@ -299,17 +419,17 @@
   }
 
   .wrapper {
-    padding: 0px 8%;
     padding-top: 48px;
   }
 }
 
 @media (max-width: 1013px) {
+  .top-desc {
+    padding: 0%;
+  }
+
   .top-desc .desc br {
     display: none;
-  }
-  .wrapper {
-    padding: 0px 11.4%;
   }
 
   .vendor-desc-img {
@@ -350,6 +470,10 @@
     text-align: justify;
   }
 
+  .top-desc .desc div .link-btn {
+    margin-top: 16px;
+  }
+
   .top-desc .imgs-sm {
     display: flex;
     justify-content: center;
@@ -360,6 +484,69 @@
     height: 240px;
   }
 
+  .customers {
+    width: 100%;
+    background-color: #06237b;
+    padding: 20% 4.5%;
+  }
+
+  .customers .customers-desc h2 {
+    font-size: 36px;
+  }
+
+  .customers .customers-desc p {
+    font-size: 16px;
+    line-height: 28px;
+    display: flex;
+    align-items: flex-start;
+    letter-spacing: -0.165px;
+    color: #d5ddf6;
+    margin-bottom: 24px;
+  }
+
+  .customers .customers-desc p span {
+    margin-left: 5px;
+  }
+
+  .customers .customers-desc {
+    width: 100%;
+    margin-bottom: 70px;
+  }
+
+  .customers .cus img {
+    width: 376px;
+    height: 420.31px;
+    margin-left: 200px;
+  }
+
+  .vendors {
+    width: 100%;
+   
+    padding: 20% 4.5%;
+  }
+
+  .vendors .customers-desc h2 {
+    font-size: 36px;
+  }
+
+  .vendors .customers-desc p {
+    font-size: 16px;
+    line-height: 28px;
+    display: flex;
+    align-items: flex-start;
+    letter-spacing: -0.165px;
+ 
+    margin-bottom: 24px;
+  }
+
+  .vendors .customers-desc p span {
+    margin-left: 5px;
+  }
+
+  .vendors .customers-desc {
+    width: 100%;
+    margin-bottom: 70px;
+  }
   .about-us {
     margin-bottom: 28px;
     display: block;
@@ -385,21 +572,46 @@
 }
 
 @media (max-width: 850px) {
+  .top-desc {
+    padding: 0%;
+  }
+
   .about-us .about-us-img img {
     width: 96px;
     height: 195px;
   }
+
+   .vendors .cus img {
+    width: 295px;
+    height: 330px;
+    margin-left: 25px;
+  }
+
+  .customers .cus img {
+    width: 295px;
+    height: 330px;
+    margin-left: 25px;
+  }
+
+  .customer-button{
+    margin: 0;
+    width: 100%;
+  }
 }
 
 @media (max-width: 750px) {
+  .top-desc {
+    padding: 0%;
+  }
+
   .top-desc .imgs-sm img {
     width: 156px;
     height: 169px;
   }
 
-  .wrapper {
+  /* .wrapper {
     padding: 0px 16px;
-  }
+  } */
 
   .about-us {
     margin-bottom: 15px;
@@ -511,12 +723,20 @@
 }
 
 @media (max-width: 500px) {
+  .top-desc {
+    padding: 0%;
+  }
+
   .vendor-desc-img img {
     height: 175px;
   }
 }
 
 @media (max-width: 410px) {
+  .top-desc {
+    padding: 0%;
+  }
+
   .vendor-desc-img img {
     height: 145px;
   }
